[gd_scene load_steps=6 format=3 uid="uid://c3jh7b2shg2yr"]

[ext_resource type="Script" uid="uid://dg2wfny8vr1r1" path="res://Scripts/Gal_vid.gd" id="1_5pa31"]
[ext_resource type="Theme" uid="uid://c74jhe44mnc8u" path="res://Temas/UI.tres" id="2_5pa31"]
[ext_resource type="Texture2D" uid="uid://1ijf2kb0in76" path="res://Assets/Fondo.PNG" id="2_wdyhr"]
[ext_resource type="AudioStream" uid="uid://b52qml5dy1idw" path="res://Assets/Audio/arcade-ui-6.wav" id="4_5h8t0"]
[ext_resource type="VideoStream" uid="uid://c30jdevvadlly" path="res://Assets/Yan-Ken-Pon.ogv" id="4_qu6vw"]

[node name="GaleriaVideo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pa31")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(576, 336)
scale = Vector2(13.1319, 13.1319)
texture = ExtResource("2_wdyhr")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 64.0
offset_right = 867.0
offset_bottom = 184.0
theme = ExtResource("2_5pa31")
theme_override_font_sizes/font_size = 100
text = "Galería"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 200.0
offset_right = 2208.0
offset_bottom = 1280.0
scale = Vector2(0.3, 0.3)
stream = ExtResource("4_qu6vw")

[node name="Volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.75
anchor_top = -0.69
anchor_right = -1.75
anchor_bottom = -0.69
offset_left = 2040.0
offset_top = 1015.12
offset_right = 2224.0
offset_bottom = 1071.12
theme = ExtResource("2_5pa31")
text = "Volver"

[node name="Imgs" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.75
anchor_top = -0.69
anchor_right = -1.75
anchor_bottom = -0.69
offset_left = 2504.0
offset_top = 1015.12
offset_right = 2688.0
offset_bottom = 1071.12
theme = ExtResource("2_5pa31")
text = "Imágenes"

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 520.0
offset_right = 352.0
offset_bottom = 600.0
theme = ExtResource("2_5pa31")
theme_override_font_sizes/font_size = 80
text = "►"

[node name="Pause" type="Button" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 524.0
offset_right = 408.0
offset_bottom = 580.0
theme = ExtResource("2_5pa31")
theme_override_font_sizes/font_size = 35
text = "||"

[node name="EfectoBoton" type="AudioStreamPlayer2D" parent="."]
position = Vector2(848, 664)
stream = ExtResource("4_5h8t0")

[connection signal="pressed" from="Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="Imgs" to="." method="_on_imgs_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="finished" from="EfectoBoton" to="." method="_on_efecto_boton_finished"]
